<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PET-CBT-1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_zhanghao">请输入账号</string>
    <string name="input_passwd">请输入密码</string>
    <string name="manager_login">管理员登录</string>
    <string name="zhanghaoerror">账号错误</string>
    <string name="pwderror">密码错误</string>
    <string name="managernameisnull">管理员账号为空</string>
    <string name="managerpwdisnull">密码不能为空</string>
    <string name="ipshezhi">ip设置</string>
    <string name="shezhi">设置</string>
    <string name="shezhisucess">设置成功</string>
    <string name="portisnull">端口不能为空</string>
    <string name="ipisnull">ip不能为空</string>
    <string name="tuichu">退出</string>
    <string name="close">关闭</string>
    <string name="input_ip">请输入ip</string>
    <string name="input_port">请输入端口</string>
    <string name="fanhui">返回</string>
    <string name="szip">请联系管理员设置IP</string>
    <string name="http">http://192.168.0.198/</string>
    <string name="requestuser">index.php/index/index/traincontent.html?screen_code=</string>
    <string name="requestuserstatu">index.php/index/index/trainend.html?u_id=</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
