<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/http"
        android:hint="@string/input_ip"
        />
    <Button
        android:id="@+id/shezhi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shezhi"
        />
    <Button
        android:id="@+id/tuichu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fanhui"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:textSize="19sp"
        />
</LinearLayout>
