<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/managername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="admin"
        android:hint="@string/input_zhanghao"
        />
    <EditText
        android:id="@+id/managerpwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="123456"
        android:hint="@string/input_passwd"
        />
    <Button
        android:id="@+id/managerbut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manager_login"
        />
</LinearLayout>
